--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ FC Twente werd voor het eerst in zijn historie lands kampioen in het seizoen 200
 De ploeg werd vier keer tweede in de Eredivisie en haalde zeven keer een derde plaats.</p>
 <p>
 </p>
-<img src="Logo_twente.WEBP" alt="Enschede Overijssel Nederland" style="width:70px;height:70px;float: right">
+<img src="fc_twente.png" alt="Enschede Overijssel Nederland" style="width:70px;height:70px;float: right">
 </article>
 </div>
 </div>
